# contas-pagas-franquias

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README_DEPLOY.md  README_GITHUB.md  README_STREAMLIT.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_minimal.txt  requirements_prod.txt  requirements_streamlit.txt  run_sistema_unificado_final.bat  setup.py  sistema_unificado_final.py
