[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-analise-franquias"
version = "1.0.0"
description = "Sistema completo para análise de franquias ATIVAS/INATIVAS e contas a receber com pagamentos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Derciel Alves", email = "derciel@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["streamlit", "data-analysis", "excel", "franquias", "contas-receber", "dashboard"]
requires-python = ">=3.8"

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "plotly>=5.0.0",
    "scipy>=1.7.0",
    "altair>=4.2.0",
    "vega_datasets>=0.9.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "streamlit-aggrid>=0.3.0",
    "openai>=1.0.0",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Derciel/contas-pagas-franquias"
Repository = "https://github.com/Derciel/contas-pagas-franquias.git"
Issues = "https://github.com/Derciel/contas-pagas-franquias/issues"

[project.scripts]
sistema = "sistema_unificado_final:main"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
data_files = [
    ("data", ["*.xlsx", "*.csv"]),
    ("logs", ["*.log"]),
    ("config", ["*.toml", "*.yaml"]),
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "setup.py",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
